[package]
name        = "bipon39"
version     = "0.1.1"
edition     = "2021"
description = "BIPỌ̀N39 — Sovereign Base-256 mnemonic library for the Ọmọ Kọ́dà ecosystem"
license     = "MIT"
repository  = "https://github.com/Bino-Elgua/Bipon39-Rust"
readme      = "README.md"
keywords    = ["mnemonic", "bip39", "base256", "yoruba", "crypto"]
categories  = ["cryptography", "encoding"]

[[bin]]
name = "bipon39"
path = "src/bin/cli.rs"

[dependencies]
sha2                  = "0.10"
hmac                  = "0.12"
pbkdf2                = { version = "0.12", default-features = false, features = ["hmac"] }
digest                = "0.10"
hex                   = "0.4"
unicode-normalization = "0.1"
zeroize               = { version = "1.7", features = ["derive"] }
serde                 = { version = "1.0", features = ["derive"] }
serde_json            = "1.0"
thiserror             = "1.0"
subtle                = "2.5"
once_cell             = "1.19"
clap                  = { version = "4.6", features = ["derive"] }
getrandom             = "0.2"
ed25519-dalek         = { version = "2", features = ["rand_core"] }
bs58                  = "0.5"

[dev-dependencies]
criterion   = { version = "0.5", features = ["html_reports"] }

